# Flute-X-GPT

Flute_X_GPT/: References.txt  ascii_panel.py  audio_player.py  beam_search_chat.py  chdir_context.py  collate_speech.py  env.py  functions.py  gpt_interface.py  graphic_terminal.py  ideal.py  ideal_beginner.py  injected_prompts.py  literals.py  load_api_key.py  log_audio.py  machine_middleware.py  machine_middleware_interface.py  main.py  music.py  mysocket.py  notes.md  online_linear_learner.py  playback_script.py  render_script_audio.py  requirements.md  requirements.txt  selectAudioDevice.py  shared.py  singleton.py  state_machine.py  sys_path_context.py  system_principles.py  t2s.py  teleprompt.py  temp.bat  test_ideal.py  test_transcribe.py  tokenizer.py  transcribe.py  (+2 more)
esp32/: CMakeLists.txt  _clearBuild.bat  build.py  clearBuildCache.bat  monitorSerial.bat  sdkconfig  sdkconfig.old  threeWindows.bat
esp32/main/: CMakeLists.txt  auto_pof.c  auto_pof.h  bmp180.c  bmp180.h  bootup_jingle.c  bootup_jingle.h  circular_queue.c  circular_queue.h  circular_queue_with_time.c  circular_queue_with_time.h  comm.c  comm.h  diagnose.c  electric_flute.c  electric_flute.h  env.c  env.h  handshake.c  handshake.h  haptic.c  haptic.h  kit.c  kit.h  main.c  music.c  music.h  note_queue.c  note_queue.h  print_and_send_log.c  print_and_send_log.h  priorities.h  recv_packet.c  recv_packet.h  role.h  secrets.h  send_packet.c  send_packet.h  sense_breath.c  sense_breath.h  (+18 more)
proc/: GUI.pde  analysis.pde  api.pde  auto_POF.pde  bgm.pde  comm.pde  cyp.pde  degree_config.pde  env.pde  (+27 more)
(+404 files in other folders)
