idf_component_register(
    SRCS 
        "comm.c"
        "print_and_send_log.c"
        "handshake.c"
        "kit.c"
        "music.c"
        "recv_packet.c"
        "shared.c"
        "tests.c"
        "timbre.c"
        "wave_cube_synth.c"
        "wifi.c"
        "main.c"
        "time_keep.c"
        "servo.c"
        "env.c"
        "bmp180.c"
        "touch_sensor.c"
        "circular_queue.c"
        "haptic.c"
        "sense_breath.c"
        "electric_flute.c"
        "note_queue.c"
        "auto_pof.c"
        "bootup_jingle.c"
        "startup_barrier.c"
        "send_packet.c"
        "circular_queue_with_time.c"
    INCLUDE_DIRS "."
)
